// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PostTemplate /> Should match snapshot 1`] = `
.c26 {
  width: 16rem;
  border: 1px solid #333333;
  background: #000000;
  color: #FFFFFF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 1.6rem;
  cursor: pointer;
  -webkit-transition: filter 300ms ease-in-out;
  transition: filter 300ms ease-in-out;
}

.c26:hover {
  -webkit-filter: brightness(50%);
  filter: brightness(50%);
}

.c26:disabled {
  opacity: 0.4;
}

.c10 {
  line-height: 1.2;
  color: #000000;
  font-size: 2.4rem;
  text-transform: uppercase;
}

.c18 {
  line-height: 1.2;
  color: #000000;
  font-size: 2.4rem;
  text-transform: none;
}

.c23 .c9 {
  margin: 0;
  margin-top: calc(1.6rem - 0.6rem);
  margin-bottom: 1.6rem;
}

.c23 a {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
}

.c23 img {
  -webkit-transition: filter 300ms ease-in-out;
  transition: filter 300ms ease-in-out;
  width: 100%;
  max-width: 100%;
}

.c23:hover a {
  color: #dc143c;
}

.c23:hover img {
  -webkit-filter: brightness(80%);
  filter: brightness(80%);
}

.c24 {
  max-width: 100%;
  -webkit-transition: opacity 300ms ease-in-out;
  transition: opacity 300ms ease-in-out;
}

.c22 {
  max-width: 100%;
  width: 100%;
  margin: 0 auto;
  display: grid;
  grid-template-columns: repeat(auto-fill,minmax(28rem,1fr));
  gap: 3.2rem;
  padding: 3.2rem;
}

.c28 {
  width: 100%;
  text-align: center;
}

.c28 a {
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 1.6rem;
}

.c29 {
  width: 100%;
  font-size: calc(1.6rem + 0.2rem);
  line-height: 1.5;
}

.c29 p {
  width: 100%;
  margin: 2.4rem 0;
  word-wrap: break-word;
}

.c29 a,
.c29 a:visited,
.c29 a:link {
  color: #dc143c;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
}

.c29 a:hover {
  -webkit-filter: brightness(50%);
  filter: brightness(50%);
}

.c29 code {
  font-family: monospace;
  color: #dc143c;
  font-size: 1.6rem;
  background: #DDDDDD;
  padding: 0.2rem;
  margin: 0.2rem;
}

.c29 pre {
  background: #000000;
  padding: 2.4rem;
  font-family: monospace;
  color: #FFFFFF;
  margin: 2.4rem 0;
  overflow-x: auto;
  font-size: 1.6rem;
}

.c29 pre code {
  color: inherit;
  background: inherit;
}

.c29 img {
  max-width: 100%;
}

.c29 .image {
  background: #DDDDDD;
  line-height: 0;
  margin: 2.4rem 0;
}

.c29 .image figcaption {
  font-size: 1.6rem;
  padding: 1.6rem 0;
  text-align: center;
  line-height: 1.3;
  margin: 2.4rem 0;
}

.c29 .image-style-side {
  max-width: 50%;
  float: right;
  margin: 2.4rem;
}

.c29 hr {
  border: none;
  border: 1px solid red;
  border-bottom: 0.1rem solid #DDDDDD;
}

.c29 ul,
.c29 ol {
  margin: 2.4rem 4.0rem;
}

.c29 .table {
  width: 100%;
  overflow: hidden;
  overflow-x: auto;
}

.c29 table {
  width: 100%;
  border-collapse: collapse;
}

.c29 table td,
.c29 table th {
  padding: 1.6rem;
  border: 0.1rem solid #DDDDDD;
}

.c29 blockquote {
  border-left: 0.5rem solid #dc143c;
  color: #AAAAAA;
  -webkit-filter: brightness(80%);
  filter: brightness(80%);
  padding-left: 2.4rem;
  font-style: italic;
  margin: 2.4rem;
}

.c7 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
}

.c30 {
  position: fixed;
  background: #000000;
  color: #FFFFFF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 4rem;
  height: 4rem;
  bottom: 2rem;
  right: 2rem;
  z-index: 6;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
}

.c12 > img {
  width: 15rem;
  height: 15rem;
  border-radius: 50%;
}

.c16 {
  max-width: 96rem;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-left: 1.6rem;
  padding-bottom: 6.4rem;
  color: #333333;
  font-size: 1.6rem;
  margin: 0 auto;
}

.c16 .c9 {
  margin-right: calc(1.6rem - 1rem);
}

.c17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: column wrap;
  -ms-flex-flow: column wrap;
  flex-flow: column wrap;
  margin-left: 2.4rem;
}

.c14 {
  display: block;
  color: #FFFFFF;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin-bottom: 1.6rem;
  font-size: 1.8rem;
  border-right: 0.5rem solid #000000;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
  cursor: pointer;
}

.c14:hover {
  border-right: 0.5rem solid #dc143c;
  color: #dc143c;
}

.c5 {
  width: 27rem;
  height: 100%;
  background: #000000;
  border-top-right-radius: 4px;
  padding: 0.8rem calc(0.8rem - 0.6rem);
  position: fixed;
  left: -26rem;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
  z-index: 1001;
}

.c5 .c11 {
  margin-top: 6.4rem;
}

.c5 .c11 img {
  border: 0.5rem solid #dc143c;
}

.c5.active {
  left: 0rem;
  overflow-y: auto;
  overflow-x: hidden;
}

.c8 {
  width: 100%;
  max-width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  background-color: #000000;
  border-radius: 4px;
  left: 2rem;
}

.c6 svg {
  width: 3rem;
  color: #FFFFFF;
  padding-right: 3.5rem;
  padding-top: 1rem;
  cursor: pointer;
  -webkit-transition: filter 300ms ease-in-out;
  transition: filter 300ms ease-in-out;
}

.c6 svg:hover {
  -webkit-filter: brightness(50%);
  filter: brightness(50%);
}

.c6 .menuIcon {
  padding: 0;
}

.c13 {
  width: 90%;
  margin: 4rem 0;
}

.c0 {
  position: fixed;
  top: 2rem;
  right: 2rem;
  z-index: 2;
}

.c1 {
  position: relative;
  display: inline-block;
  width: 5rem;
  height: 2.5rem;
  line-height: 0;
  font-size: 0;
  overflow: hidden;
  color: rgba(0,0,0,0);
}

.c2 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  opacity: 0;
  width: 0;
  height: 0;
}

.c2:checked + .c3 {
  background: #dc143c;
}

.c2:focus + .c3 {
  box-shadow: 0 0 1px #dc143c;
}

.c2:checked + .c3:before {
  -webkit-transform: translateX(1.9rem);
  -ms-transform: translateX(1.9rem);
  transform: translateX(1.9rem);
  background: #000000;
}

.c4 {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background: #DDDDDD;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
  border-radius: 2rem;
  box-shadow: 0 0 1px #000000;
}

.c4:before {
  content: '';
  position: absolute;
  height: 2.1rem;
  width: 2.1rem;
  left: 0.4rem;
  bottom: 0.25rem;
  background: #333333;
  border-radius: 50%;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
}

.c15 {
  padding-top: 6.4rem;
  padding-left: 20px;
}

.c19 {
  margin: 0 auto;
  margin-bottom: 4.0rem;
  padding: 0 3.2rem;
  max-width: 120rem;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c20 {
  padding: 0.5rem 1.6rem;
}

.c21 {
  max-width: 120rem;
  width: 100%;
  margin-bottom: 6.4rem;
}

.c27 {
  width: 100%;
  margin: 0 auto;
  padding: 0;
}

.c25 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-left: 2.4rem;
  padding-top: 1.6rem;
}

@media (max-width:360px) {
  .c22 {
    grid-template-columns: 1fr;
  }
}

@media (max-width:768px) {
  .c29 {
    font-size: 2rem;
  }

  .c29 pre {
    width: 82%;
  }

  .c29 .image-style-side {
    max-width: 100%;
    float: none;
    margin: 0;
  }
}

@media (max-width:768px) {
  .c16 {
    margin: 0;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

@media (max-width:768px) {
  .c17 {
    text-align: center;
    margin-top: 1.6rem;
  }
}

@media (max-width:768px) {
  .c5 {
    width: 25.5rem;
  }
}

@media (max-width:768px) {
  .c21 {
    width: 100%;
  }
}

<div>
  <div
    class=""
  >
    <div
      class="c0"
    >
      <label
        aria-label="Toggle light and dark modes"
        class="c1"
      >
        <input
          class="c2"
          type="checkbox"
          value="Toggle light and dark modes"
        />
        <span
          class="c3 c4"
        />
      </label>
    </div>
    <div
      class="c5"
    >
      <div
        class="c6"
      >
        <svg
          aria-label="Open menu"
          class="c7 menuIcon"
          fill="currentColor"
          focusable="false"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            Open menu
          </title>
          <path
            d="M0 0h24v24H0V0z"
            fill="none"
          />
          <path
            d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
          />
        </svg>
      </div>
      <nav
        aria-hidden="true"
        class="c8"
      >
        <h1
          class="c9 c10"
        >
          <a
            class="c11 c12"
            href="/"
            target="_self"
          >
            <img
              alt="New Programming"
              src="/assets/images/logo.jpg"
            />
          </a>
        </h1>
        <section
          class="c13"
        >
          <a
            class="c14"
            href="https://pt-br.reactjs.org/docs/hooks-effect.html"
            target="_blank"
          >
            useEffect
          </a>
        </section>
      </nav>
    </div>
    <div
      class="c15"
    >
      <header
        class="c16"
      >
        <h1
          class="c9 c10"
        >
          <a
            class="c11 c12"
            href="/"
            target="_self"
          >
            <img
              alt="New Programming - Esse blog é voltado para os amantes de tecnologia que querem aprender sempre um pouco mais."
              src="/assets/images/logo.jpg"
            />
          </a>
        </h1>
        <section
          class="c17"
        >
          <h1
            class="c9 c18"
          >
            New Programming
          </h1>
          <p>
            Esse blog é voltado para os amantes de tecnologia que querem aprender sempre um pouco mais.
          </p>
        </section>
      </header>
    </div>
    <div
      class="c19"
    >
      <form
        action="/search/"
        method="GET"
      >
        <input
          class="c20"
          name="q"
          placeholder="Encontre posts"
          type="search"
          value=""
        />
      </form>
    </div>
    <div
      class="c21"
    >
      <main
        class="c22"
      >
        <section
          class="c23"
        >
          <a
            href="/posts/usando-effect-hook-hook-de-efeito"
          >
            <img
              alt="Usando Effect Hook (Hook de Efeito)"
              class="c24"
              src="https://res.cloudinary.com/project-cdn/image/upload/v1643992684/use_Effect_hook_62405844a5.png"
            />
          </a>
          <h2
            class="c9 c18"
          >
            <a
              href="/posts/usando-effect-hook-hook-de-efeito"
            >
              Usando Effect Hook (Hook de Efeito)
            </a>
          </h2>
          <p
            class=""
          >
            O Effect Hook (Hook de Efeito) te permite executar efeitos colaterais em componentes funcionais.
          </p>
        </section>
      </main>
      <div
        class="c25"
      >
        <button
          class="c26"
        >
          Carregar mais
        </button>
      </div>
    </div>
    <div
      class="c27"
    >
      <footer
        class="c28"
      >
        <div
          class="c29"
        >
          <p>
            A footer paragraph
          </p>
        </div>
      </footer>
    </div>
    <a
      aria-label="Go to top"
      class="c30"
      href="#"
      title="Go to top"
    >
      <svg
        aria-hidden="true"
        class="c7"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6 1.41 1.41z"
        />
      </svg>
    </a>
  </div>
</div>
`;

exports[`<PostTemplate /> Should match snapshot without posts 1`] = `
.c10 {
  line-height: 1.2;
  color: #000000;
  font-size: 2.4rem;
  text-transform: uppercase;
}

.c18 {
  line-height: 1.2;
  color: #000000;
  font-size: 2.4rem;
  text-transform: none;
}

.c22 {
  max-width: 100%;
  width: 100%;
  margin: 0 auto;
  display: grid;
  grid-template-columns: repeat(auto-fill,minmax(28rem,1fr));
  gap: 3.2rem;
  padding: 3.2rem;
}

.c23 {
  padding: 3.2rem;
  text-align: center;
  font-size: 1.6rem;
}

.c25 {
  width: 100%;
  text-align: center;
}

.c25 a {
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 1.6rem;
}

.c26 {
  width: 100%;
  font-size: calc(1.6rem + 0.2rem);
  line-height: 1.5;
}

.c26 p {
  width: 100%;
  margin: 2.4rem 0;
  word-wrap: break-word;
}

.c26 a,
.c26 a:visited,
.c26 a:link {
  color: #dc143c;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
}

.c26 a:hover {
  -webkit-filter: brightness(50%);
  filter: brightness(50%);
}

.c26 code {
  font-family: monospace;
  color: #dc143c;
  font-size: 1.6rem;
  background: #DDDDDD;
  padding: 0.2rem;
  margin: 0.2rem;
}

.c26 pre {
  background: #000000;
  padding: 2.4rem;
  font-family: monospace;
  color: #FFFFFF;
  margin: 2.4rem 0;
  overflow-x: auto;
  font-size: 1.6rem;
}

.c26 pre code {
  color: inherit;
  background: inherit;
}

.c26 img {
  max-width: 100%;
}

.c26 .image {
  background: #DDDDDD;
  line-height: 0;
  margin: 2.4rem 0;
}

.c26 .image figcaption {
  font-size: 1.6rem;
  padding: 1.6rem 0;
  text-align: center;
  line-height: 1.3;
  margin: 2.4rem 0;
}

.c26 .image-style-side {
  max-width: 50%;
  float: right;
  margin: 2.4rem;
}

.c26 hr {
  border: none;
  border: 1px solid red;
  border-bottom: 0.1rem solid #DDDDDD;
}

.c26 ul,
.c26 ol {
  margin: 2.4rem 4.0rem;
}

.c26 .table {
  width: 100%;
  overflow: hidden;
  overflow-x: auto;
}

.c26 table {
  width: 100%;
  border-collapse: collapse;
}

.c26 table td,
.c26 table th {
  padding: 1.6rem;
  border: 0.1rem solid #DDDDDD;
}

.c26 blockquote {
  border-left: 0.5rem solid #dc143c;
  color: #AAAAAA;
  -webkit-filter: brightness(80%);
  filter: brightness(80%);
  padding-left: 2.4rem;
  font-style: italic;
  margin: 2.4rem;
}

.c7 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
}

.c27 {
  position: fixed;
  background: #000000;
  color: #FFFFFF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 4rem;
  height: 4rem;
  bottom: 2rem;
  right: 2rem;
  z-index: 6;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
}

.c12 > img {
  width: 15rem;
  height: 15rem;
  border-radius: 50%;
}

.c16 {
  max-width: 96rem;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-left: 1.6rem;
  padding-bottom: 6.4rem;
  color: #333333;
  font-size: 1.6rem;
  margin: 0 auto;
}

.c16 .c9 {
  margin-right: calc(1.6rem - 1rem);
}

.c17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: column wrap;
  -ms-flex-flow: column wrap;
  flex-flow: column wrap;
  margin-left: 2.4rem;
}

.c14 {
  display: block;
  color: #FFFFFF;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin-bottom: 1.6rem;
  font-size: 1.8rem;
  border-right: 0.5rem solid #000000;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
  cursor: pointer;
}

.c14:hover {
  border-right: 0.5rem solid #dc143c;
  color: #dc143c;
}

.c5 {
  width: 27rem;
  height: 100%;
  background: #000000;
  border-top-right-radius: 4px;
  padding: 0.8rem calc(0.8rem - 0.6rem);
  position: fixed;
  left: -26rem;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
  z-index: 1001;
}

.c5 .c11 {
  margin-top: 6.4rem;
}

.c5 .c11 img {
  border: 0.5rem solid #dc143c;
}

.c5.active {
  left: 0rem;
  overflow-y: auto;
  overflow-x: hidden;
}

.c8 {
  width: 100%;
  max-width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  background-color: #000000;
  border-radius: 4px;
  left: 2rem;
}

.c6 svg {
  width: 3rem;
  color: #FFFFFF;
  padding-right: 3.5rem;
  padding-top: 1rem;
  cursor: pointer;
  -webkit-transition: filter 300ms ease-in-out;
  transition: filter 300ms ease-in-out;
}

.c6 svg:hover {
  -webkit-filter: brightness(50%);
  filter: brightness(50%);
}

.c6 .menuIcon {
  padding: 0;
}

.c13 {
  width: 90%;
  margin: 4rem 0;
}

.c0 {
  position: fixed;
  top: 2rem;
  right: 2rem;
  z-index: 2;
}

.c1 {
  position: relative;
  display: inline-block;
  width: 5rem;
  height: 2.5rem;
  line-height: 0;
  font-size: 0;
  overflow: hidden;
  color: rgba(0,0,0,0);
}

.c2 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  opacity: 0;
  width: 0;
  height: 0;
}

.c2:checked + .c3 {
  background: #dc143c;
}

.c2:focus + .c3 {
  box-shadow: 0 0 1px #dc143c;
}

.c2:checked + .c3:before {
  -webkit-transform: translateX(1.9rem);
  -ms-transform: translateX(1.9rem);
  transform: translateX(1.9rem);
  background: #000000;
}

.c4 {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background: #DDDDDD;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
  border-radius: 2rem;
  box-shadow: 0 0 1px #000000;
}

.c4:before {
  content: '';
  position: absolute;
  height: 2.1rem;
  width: 2.1rem;
  left: 0.4rem;
  bottom: 0.25rem;
  background: #333333;
  border-radius: 50%;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
}

.c15 {
  padding-top: 6.4rem;
  padding-left: 20px;
}

.c19 {
  margin: 0 auto;
  margin-bottom: 4.0rem;
  padding: 0 3.2rem;
  max-width: 120rem;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c20 {
  padding: 0.5rem 1.6rem;
}

.c21 {
  max-width: 120rem;
  width: 100%;
  margin-bottom: 6.4rem;
}

.c24 {
  width: 100%;
  margin: 0 auto;
  padding: 0;
}

@media (max-width:360px) {
  .c22 {
    grid-template-columns: 1fr;
  }
}

@media (max-width:768px) {
  .c26 {
    font-size: 2rem;
  }

  .c26 pre {
    width: 82%;
  }

  .c26 .image-style-side {
    max-width: 100%;
    float: none;
    margin: 0;
  }
}

@media (max-width:768px) {
  .c16 {
    margin: 0;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

@media (max-width:768px) {
  .c17 {
    text-align: center;
    margin-top: 1.6rem;
  }
}

@media (max-width:768px) {
  .c5 {
    width: 25.5rem;
  }
}

@media (max-width:768px) {
  .c21 {
    width: 100%;
  }
}

<div>
  <div
    class=""
  >
    <div
      class="c0"
    >
      <label
        aria-label="Toggle light and dark modes"
        class="c1"
      >
        <input
          class="c2"
          type="checkbox"
          value="Toggle light and dark modes"
        />
        <span
          class="c3 c4"
        />
      </label>
    </div>
    <div
      class="c5"
    >
      <div
        class="c6"
      >
        <svg
          aria-label="Open menu"
          class="c7 menuIcon"
          fill="currentColor"
          focusable="false"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            Open menu
          </title>
          <path
            d="M0 0h24v24H0V0z"
            fill="none"
          />
          <path
            d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
          />
        </svg>
      </div>
      <nav
        aria-hidden="true"
        class="c8"
      >
        <h1
          class="c9 c10"
        >
          <a
            class="c11 c12"
            href="/"
            target="_self"
          >
            <img
              alt="New Programming"
              src="/assets/images/logo.jpg"
            />
          </a>
        </h1>
        <section
          class="c13"
        >
          <a
            class="c14"
            href="https://pt-br.reactjs.org/docs/hooks-effect.html"
            target="_blank"
          >
            useEffect
          </a>
        </section>
      </nav>
    </div>
    <div
      class="c15"
    >
      <header
        class="c16"
      >
        <h1
          class="c9 c10"
        >
          <a
            class="c11 c12"
            href="/"
            target="_self"
          >
            <img
              alt="New Programming - Esse blog é voltado para os amantes de tecnologia que querem aprender sempre um pouco mais."
              src="/assets/images/logo.jpg"
            />
          </a>
        </h1>
        <section
          class="c17"
        >
          <h1
            class="c9 c18"
          >
            New Programming
          </h1>
          <p>
            Esse blog é voltado para os amantes de tecnologia que querem aprender sempre um pouco mais.
          </p>
        </section>
      </header>
    </div>
    <div
      class="c19"
    >
      <form
        action="/search/"
        method="GET"
      >
        <input
          class="c20"
          name="q"
          placeholder="Encontre posts"
          type="search"
          value=""
        />
      </form>
    </div>
    <div
      class="c21"
    >
      <main
        class="c22"
      >
        <p
          class="c23"
        >
          Nenhum post encontrado aqui =(
        </p>
      </main>
    </div>
    <div
      class="c24"
    >
      <footer
        class="c25"
      >
        <div
          class="c26"
        >
          <p>
            A footer paragraph
          </p>
        </div>
      </footer>
    </div>
    <a
      aria-label="Go to top"
      class="c27"
      href="#"
      title="Go to top"
    >
      <svg
        aria-hidden="true"
        class="c7"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6 1.41 1.41z"
        />
      </svg>
    </a>
  </div>
</div>
`;
